--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  * @Autor: XuXiaoling
  * @Date: 2021-05-19 15:04:24
  * @LastEditors: XuXiaoling
- * @LastEditTime: 2021-05-20 16:56:30
+ * @LastEditTime: 2021-05-25 14:16:01
 -->
 <!DOCTYPE html>
 <html>
@@ -15,7 +15,10 @@
 
     </head>
     <body>
-        <xx-switch disabled></xx-switch>
+        <xx-switch></xx-switch>
+        <xx-button type='primary' plain disabled>hellos</xx-button>
+        <xx-button type='primary' >hellos</xx-button>
+        <xx-switch></xx-switch>
         <script type="module" src="./src/index.js"></script>
         <script>
            let xx_switch = document.querySelector('xx-switch');
